gcc/testsuite/rust/rustc/ui/attributes/unsafe/unsafe-safe-attribute.rs
#[unsafe(repr(C))] // { dg-error "" "" { target *-*-* } }
struct Foo {}

fn main() {}

